client/src/index.css
@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600');

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  font-family: 'Work Sans', sans-serif;
  /* background-image: url(./backgroundImage.jpg); */
  /* background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover; */
  /* background-size: 100% 100%; */
  font-family: 'Work Sans', sans-serif;
  background-color: #EEF0F2;
}

#root {
  flex: 1 0 auto;
}

.remove-float {
  float: unset !important;
}

#page-footer {
  font-family: 'Work Sans';
  font-weight: 400;
  background-color: #344955 !important; 
  color: #fff !important;
  float: unset;
}

.btn, .btn-floating i {
  background-color: #F9AA33; 
  color:  #344955; 
}

.btn:hover, .btn-large:hover, .btn-small:hover {
  background-color: rgb(255, 199, 116) !important;
}

.btn:focus, .btn:focus, .btn-large:focus, .btn-small:focus {
  background-color: rgb(248, 152, 9);
}

.unsetOverflow {
  overflow: unset;
}

.marginRight {
  margin-right: 15px;
}

.marginTop {
  margin-top: 15px;
}

.marginBottom {
  margin-bottom: 15px;
}

.marginBottomMedium {
  margin-bottom: 25px;
}

.marginRightMedium {
  margin-right: 25px;
}

.marginTopMedium {
  margin-top: 25px;
}

.paddingRight {
  padding-right: 15px;
}

.pageContainer {
  padding: 20px 0px 20px 0px;
  background-color: white;
  color: #232F34;
}

.hide {
  display: none;
}

#footer a {
  color: #F9AA33;
}

#page-footer {
  padding-top: 20px;
}

input, textarea {
  color: #232F34 !important;
}

input:focus, textarea:focus {
  border-bottom: 1px solid #F9AA33 !important;
  box-shadow: 0 1px 0 0 #F9AA33 !important;
}

label {
  color: #232F34 !important;
}

input[type="checkbox"].filled-in:checked+span:not(.lever):after {
  border: 2px solid #F9AA33;
  background-color: #F9AA33;
}

